[project]
name = "pylicit"
version = "0.0.0"
description = "Explicit Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["E701"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.15",
]
