[project]
name = "cflow"
version = "0.1.0"
description = "Control flow constructs for python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["E701"]

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "mypy>=2.1.0",
    "pyrefly>=0.52.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.16",
]
