[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cflowpy"
version = "0.3.0"
description = "Control flow constructs for python."
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E"]
keywords = []
authors = [
  { name = "maromei", email = "maromei@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/maromei/cflowpy#readme"
Issues = "https://github.com/maromei/cflowpy/issues"
Source = "https://github.com/maromei/cflowpy"

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "hatch>=1.17.0",
    "mypy>=2.1.0",
    "pyrefly>=0.52.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.16",
]

#############
### HATCH ###
#############

[tool.hatch.build.targets.wheel]
packages = ["src/cflowpy"]

[tool.hatch.build.targets.sdist]
exclude = ["env", "scripts", ".python-version", ".gitignore"]

##########
### UV ###
##########

[tool.uv]
package = true

############
### RUFF ###
############

[tool.ruff.lint]
ignore = ["E701"]

####################
### BASEDPYRIGHT ###
####################

[tool.basedpyright]
reportExplicitAny = false
reportImplicitStringConcatenation = false
